# GameStudio

./: .gitignore  BUILD_SCRIPTS.md  CMakeLists.txt  PACKAGE_MANAGER_README.md  README.md  build.bat  build.sh  clean.sh  run.sh  test_sample.cpp
conf/: configure.xml
lang/: en.xml  ru.xml
src/: codeeditor.cpp  codeeditor.h  language_manager.cpp  language_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  projectcreator.cpp  projectcreator.h  projectselectionscreen.cpp  projectselectionscreen.h  welcomescreen.cpp  welcomescreen.h
src/core/: packagedialog.cpp  packagedialog.h  packagemanager.cpp  packagemanager.h  packageparser.cpp  packageparser.h
src/settings/: settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
